# AirBL

./: CONFIG-EXAMPLE.md  README.md  config-example.json  index.html  main.py  pyproject.toml  requirements.txt
airbl/: __init__.py  airvpn.py  confgen.py  config.py  database.py  dns_lookup.py  dronebl.py  gluetun.py  hummingbird.py  namespace.py  pinger.py  scanner.py  speedtest.py  ui.py  wireguard.py  wireguard_gen.py
airbl/static/css/: style.css
airbl/static/js/: app.js
airbl/web/: __init__.py  __main__.py  app.py  debug_page.py  state.py  tasks.py  websockets.py
airbl/web/routes/: __init__.py  api.py  pages.py
airbl/web/templates/: base.html  debug.html  index.html  metrics.html  servers.html  settings.html
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/conf/: .gitkeep  airbl-config.json
